# swar

./: cabal.project  default.nix  hie.yaml  shell.nix
nix/: nixpkgs.nix  pkgs.nix
nix/exts/: prim-swar.nix  swar.nix
prim-swar/: prim-swar.cabal  shell.nix
prim-swar/src/Data/SWAR/Vec4x8/: Prim.hs
swar/: shell.nix  swar.cabal
swar/src/Data/SWAR/: Vec4x8.hs
swar/test/: Test.hs
swar/test/Test/: Core.hs  Gen.hs  SWAR.hs
swar/test/Test/SWAR/: Vec4x8.hs
