cabal-version: 2.4

name:        swar
category:    Data
version:     1.0.0
synopsis:    TODO 
description: TODO 

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/swar
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.4

source-repository head
  type:     git
  location: https://github.com/riz0id/swar

common common
  default-language: Haskell2010

  default-extensions:
    BangPatterns BinaryLiterals DeriveDataTypeable DeriveGeneric DeriveLift 
    GADTs ImportQualifiedPost KindSignatures MagicHash NumericUnderscores 
    ScopedTypeVariables UnboxedTuples UnliftedNewtypes

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  ghc-options:

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , prim-swar        
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.SWAR.Vec4x8

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:
    BlockArguments GADTs ImportQualifiedPost KindSignatures MagicHash 
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , swar
    , tasty
    , tasty-hedgehog 

  other-modules:
    Test.Core
    Test.Gen
    Test.SWAR
    Test.SWAR.Vec4x8
